# scikit-longitudinal

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.MD  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  build_docs.sh  dockerfile  index.html  mkdocs.yml  mkgendocs.yml  poetry.toml  pylintrc  pyproject.toml  requirements-dev.txt  scikit-learn-tree-ubuntu-latest.Dockerfile  setup.py  zensical.toml
scikit-learn/: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.rst  azure-pipelines.yml  conftest.py  pyproject.toml  setup.cfg  setup.py
scikit-learn/.github/: labeler-file-extensions.yml  labeler-module.yml
scikit-learn/.github/ISSUE_TEMPLATE/: bug_report.yml
scikit-learn/.github/workflows/: check-upstream.yml  wheels.yml
scikit-learn/asv_benchmarks/benchmarks/: cluster.py  common.py  datasets.py  decomposition.py  ensemble.py  linear_model.py  manifold.py  metrics.py  model_selection.py  neighbors.py  svm.py  utils.py
scikit-learn/benchmarks/: bench_20newsgroups.py  bench_covertype.py  bench_feature_expansions.py  bench_glm.py  bench_glmnet.py  bench_hist_gradient_boosting.py  bench_hist_gradient_boosting_adult.py  bench_hist_gradient_boosting_categorical_only.py  bench_hist_gradient_boosting_higgsboson.py  bench_hist_gradient_boosting_threading.py  bench_isolation_forest.py  bench_isotonic.py  bench_kernel_pca_solvers_time_vs_n_components.py  bench_kernel_pca_solvers_time_vs_n_samples.py  bench_lasso.py  bench_lof.py  bench_mnist.py  bench_multilabel_metrics.py  bench_online_ocsvm.py  bench_plot_fastkmeans.py  bench_plot_hierarchical.py  bench_plot_incremental_pca.py  bench_plot_lasso_path.py  bench_plot_neighbors.py  bench_plot_nmf.py  bench_plot_omp_lars.py  bench_plot_parallel_pairwise.py  bench_plot_polynomial_kernel_approximation.py  bench_plot_randomized_svd.py  bench_plot_svd.py  bench_plot_ward.py  bench_random_projections.py  bench_rcv1_logreg_convergence.py  bench_saga.py  bench_sample_without_replacement.py  bench_sgd_regression.py  bench_sparsify.py  bench_text_vectorizers.py  bench_tree.py  bench_tsne_mnist.py
scikit-learn/build_tools/: generate_authors_table.py  linting.sh  shared.sh  update_environments_and_lock_files.py
scikit-learn/build_tools/azure/: get_commit_message.py  test_pytest_soft_dependency.sh  test_script.sh  upload_codecov.sh
scikit-learn/build_tools/circle/: build_doc.sh  list_versions.py  push_doc.sh
scikit-learn/build_tools/cirrus/: build_test_arm.sh
scikit-learn/build_tools/github/: check_wheels.py  test_source.sh  test_windows_wheels.sh  vendor.py
scikit-learn/build_tools/wheels/: build_wheels.sh  test_wheels.sh
scikit-learn/doc/: Makefile  common_pitfalls.rst  conf.py  conftest.py  datasets.rst  faq.rst  getting_started.rst  glossary.rst  inspection.rst  install.rst  model_persistence.rst  related_projects.rst  roadmap.rst  visualizations.rst  whats_new.rst
scikit-learn/doc/computing/: computational_performance.rst  parallelism.rst  scaling_strategies.rst
scikit-learn/doc/datasets/: loading_other_datasets.rst  real_world.rst  sample_generators.rst  toy_dataset.rst
scikit-learn/doc/developers/: advanced_installation.rst  bug_triaging.rst  contributing.rst  cython.rst  develop.rst  maintainer.rst  minimal_reproducer.rst  performance.rst  plotting.rst  tips.rst  utilities.rst
scikit-learn/doc/modules/: array_api.rst  biclustering.rst  calibration.rst  classes.rst  clustering.rst  compose.rst  covariance.rst  cross_decomposition.rst  cross_validation.rst  decomposition.rst  density.rst  ensemble.rst  feature_extraction.rst  feature_selection.rst  gaussian_process.rst  grid_search.rst  impute.rst  isotonic.rst  kernel_approximation.rst  kernel_ridge.rst  lda_qda.rst  learning_curve.rst  linear_model.rst  manifold.rst  metrics.rst  mixture.rst  model_evaluation.rst  multiclass.rst  naive_bayes.rst  neighbors.rst  neural_networks_supervised.rst  neural_networks_unsupervised.rst  outlier_detection.rst  partial_dependence.rst  permutation_importance.rst  preprocessing.rst  preprocessing_targets.rst  random_projection.rst  semi_supervised.rst  sgd.rst  (+3 more)
scikit-learn/doc/sphinxext/: add_toctree_functions.py  allow_nan_estimators.py  sphinx_issues.py
scikit-learn/doc/whats_new/: older_versions.rst  v0.13.rst  v0.14.rst  v0.15.rst  v0.16.rst  v0.17.rst  v0.18.rst  v0.19.rst  v0.20.rst  v0.21.rst  v0.22.rst  v0.23.rst  v0.24.rst  v1.0.rst  v1.1.rst  v1.2.rst  v1.3.rst
scikit-learn/examples/applications/: plot_cyclical_feature_engineering.py  plot_digits_denoising.py  plot_face_recognition.py  plot_model_complexity_influence.py  plot_out_of_core_classification.py  plot_outlier_detection_wine.py  plot_prediction_latency.py  plot_species_distribution_modeling.py  plot_stock_market.py  plot_tomography_l1_reconstruction.py  plot_topics_extraction_with_nmf_lda.py  svm_gui.py  wikipedia_principal_eigenvector.py
scikit-learn/examples/bicluster/: README.txt  plot_bicluster_newsgroups.py  plot_spectral_biclustering.py  plot_spectral_coclustering.py
scikit-learn/examples/calibration/: plot_calibration.py  plot_calibration_curve.py  plot_calibration_multiclass.py  plot_compare_calibration.py
scikit-learn/examples/classification/: plot_classification_probability.py  plot_classifier_comparison.py  plot_digits_classification.py  plot_lda.py  plot_lda_qda.py
scikit-learn/examples/cluster/: README.txt  (+30 more)
scikit-learn/maint_tools/: check_pxd_in_installation.py  sort_whats_new.py  update_tracking_issue.py  whats_missing.sh
scikit-learn/scikit_learn_tree.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scikit-learn/sklearn/: _isotonic.c
scikit-learn/sklearn_fork/: __init__.py  _config.py  _isotonic.c  _min_dependencies.py  base.py  calibration.py  conftest.py  discriminant_analysis.py  dummy.py  exceptions.py  isotonic.py  kernel_approximation.py  kernel_ridge.py  multiclass.py  multioutput.py  naive_bayes.py  pipeline.py  random_projection.py
(+1280 files in other folders)
