[project]
name = "Scikit-longitudinal"
version = "0.0.7"
description = "Scikit-longitudinal is an open-source Python library for longitudinal data analysis, building on Scikit-learn's foundation with tools tailored for repeated measures data."
authors = [
    {name = "Provost Simon", email = "simon.gilbert.provost@gmail.com"},
    {name = "Alex Freitas", email = "a.a.freitas@kent.ac.uk"},
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "scipy>=1.5.0",
    "pandas<2.0.0,>=1.5.3",
    "matplotlib<4.0.0,>=3.7.0",
    "jupyter<2.0.0,>=1.0.0",
    "overrides<8.0.0,>=7.3.1",
    "statsmodels<1.0.0,>=0.14.0",
    "numpy==1.23.3",
    "graphviz<1.0.0,>=0.20.1",
    "liac-arff>=2.2.2",
    "threadpoolctl<4.0.0,>=3.1.0",
    "stopit>=1.1.2",
    "rich>=13.6.0",
    "joblib>=0.11",
    "deep-forest>=0.1.7",
    "scikit-lexicographical-trees==0.0.4",
    "ray>=2.40.0",
]
[dependency-groups]
dev = [
    "pytest>=4.4.0",
    "pytest-cov>=4.0.0",
    "black>=23.10.1",
    "isort>=5.12.0",
    "mkdocs==1.6.0",
    "mkdocs-material==9.5.27",
    "pylint>=3.3.3",
    "black>=24.10.0",
    "ruff>=0.9.1",
]
doc = [
    "mkdocs-material[imaging]",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-minify-plugin==0.8.0",
]

[urls]
Homepage = "https://github.com/simonprovost/scikit-longitudinal"
Documentation = "https://simonprovost.github.io/scikit-longitudinal/"
Tracker = "https://github.com/simonprovost/scikit-longitudinal/issues/"

[tool.uv]
default-groups = []
package = true
override-dependencies = [
    "scikit-learn ; sys_platform == 'never'",
]

[tool.setuptools]
py-modules = []
license-files = []
