[project]
name = "Scikit-longitudinal"
version = "0.1.8"
description = "Scikit-longitudinal is an open-source Python library for longitudinal data analysis, building on Scikit-learn's foundation with tools tailored for repeated measures data."
authors = [
    {name = "Provost Simon", email = "simon.gilbert.provost@gmail.com"},
    {name = "Alex Freitas", email = "a.a.freitas@kent.ac.uk"},
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "scipy>=1.11.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "jupyter<2.0.0,>=1.0.0",
    "overrides<8.0.0,>=7.3.1",
    "statsmodels<1.0.0,>=0.14.0",
    "numpy>=1.26.4,<2.0.0",
    "graphviz<1.0.0,>=0.20.1",
    "liac-arff>=2.2.2",
    "threadpoolctl<4.0.0,>=3.1.0",
    "stopit>=1.1.2",
    "rich>=13.6.0",
    "joblib>=0.11",
    "deep-forest-py310>=0.1.9",
    "scikit-lexicographical-trees==0.0.4",
    "pytest==9.0.1",
]

[dependency-groups]
parallelisation = [
    "ray>=2.40.0",
]
dev = [
    "pytest>=4.4.0",
    "pytest-cov>=4.0.0",
    "black>=23.10.1",
    "isort>=5.12.0",
    "black>=24.10.0",
    "ruff>=0.9.1",
    "pre-commit>=3.7.0",
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.25",
    "tomli>=2.0; python_version < '3.11'",
    "mkdocstrings-python>=1.16.10",
    "pymdown-extensions>=10.14.3",
    "zensical>=0.0.28",
]

[project.urls]
Homepage = "https://github.com/simonprovost/scikit-longitudinal"
Documentation = "https://scikit-longitudinal.readthedocs.io/latest/"
Releases = "https://github.com/simonprovost/scikit-longitudinal/releases"
Repository = "https://github.com/simonprovost/scikit-longitudinal"
Issues = "https://github.com/simonprovost/scikit-longitudinal/issues/"
"Scientific Paper" = "https://joss.theoj.org/papers/10.21105/joss.08481"

[tool.uv]
default-groups = []
package = true
override-dependencies = [
    "scikit-learn ; sys_platform == 'never'",
]

[tool.coverage.run]
branch = true
source = ["scikit_longitudinal/"]
omit = [
    "scikit_longitudinal/**/tests/*",
    "scikit-learn/*",
    "sklearn_fork/*",
    "./main.py",
    ".venv/*",
    "*__init__.py",
]
data_file = ".coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "def __repr__",
]
ignore_errors = true
show_missing = true

[tool.isort]
profile = "black"

[tool.setuptools]
py-modules = []
license-files = []
