[options]
packages = find:

[options.packages.find]
include = sklearn_fork*

[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
testpaths = sklearn_fork
addopts =
    --doctest-modules
    --disable-pytest-warnings
    --color=yes
    # Activate the plugin explicitly to ensure that the seed is reported
    # correctly on the CI when running `pytest --pyargs sklearn_fork` from the
    # source folder.
    -p sklearn_fork.tests.random_seed
    -rN

filterwarnings =
    ignore:the matrix subclass:PendingDeprecationWarning

[flake8]
# max line length for black
max-line-length = 88
target-version = ['py37']
# Default flake8 3.5 ignored flags
ignore=
    # check ignored by default in flake8. Meaning unclear.
    E24,
    # space before : (needed for how black formats slicing)
    E203,
    # do not assign a lambda expression, use a def
    E731,
    # do not use variables named 'l', 'O', or 'I'
    E741,
    # line break before binary operator
    W503,
    # line break after binary operator
    W504
exclude=
    .git,
    __pycache__,
    dist,
    sklearn_fork/externals,
    doc/_build,
    doc/auto_examples,
    doc/tutorial,
    build,
    asv_benchmarks/env,
    asv_benchmarks/html,
    asv_benchmarks/results,
    asv_benchmarks/benchmarks/cache

# It's fine not to put the import at the top of the file in the examples
# folder.
per-file-ignores =
    examples/*: E402
    doc/conf.py: E402

[mypy]
ignore_missing_imports = True
allow_redefinition = True

[check-manifest]
# ignore files missing in VCS
ignore =
    sklearn_fork/_loss/_loss.pyx
    sklearn_fork/linear_model/_sag_fast.pyx
    sklearn_fork/linear_model/_sgd_fast.pyx
    sklearn_fork/utils/_seq_dataset.pyx
    sklearn_fork/utils/_seq_dataset.pxd
    sklearn_fork/utils/_weight_vector.pyx
    sklearn_fork/utils/_weight_vector.pxd
    sklearn_fork/metrics/_dist_metrics.pyx
    sklearn_fork/metrics/_dist_metrics.pxd
    sklearn_fork/metrics/_pairwise_distances_reduction/_argkmin.pxd
    sklearn_fork/metrics/_pairwise_distances_reduction/_argkmin.pyx
    sklearn_fork/metrics/_pairwise_distances_reduction/_argkmin_classmode.pyx
    sklearn_fork/metrics/_pairwise_distances_reduction/_base.pxd
    sklearn_fork/metrics/_pairwise_distances_reduction/_base.pyx
    sklearn_fork/metrics/_pairwise_distances_reduction/_datasets_pair.pxd
    sklearn_fork/metrics/_pairwise_distances_reduction/_datasets_pair.pyx
    sklearn_fork/metrics/_pairwise_distances_reduction/_middle_term_computer.pxd
    sklearn_fork/metrics/_pairwise_distances_reduction/_middle_term_computer.pyx
    sklearn_fork/metrics/_pairwise_distances_reduction/_radius_neighbors.pxd
    sklearn_fork/metrics/_pairwise_distances_reduction/_radius_neighbors.pyx


[codespell]
skip = ./.git,./.mypy_cache,./doc/themes/scikit-learn-modern/static/js,./sklearn_fork/feature_extraction/_stop_words.py,./doc/_build,./doc/auto_examples,./doc/modules/generated
ignore-words = build_tools/codespell_ignore_words.txt
